// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Snapshots No props 1`] = `
<div
  className="sc-AxiKw emHJuz"
>
  <div
    className="sc-AxhCb jOJTnl"
    style={Object {}}
  >
    <div
      className="sc-AxhUy hyMSCF"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-AxheI fcSpvz"
    >
      <div
        className="sc-AxirZ cESjww"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots className 1`] = `
<div
  className="sc-AxiKw emHJuz"
>
  <div
    className="sc-AxhCb jOJTnl Slider"
    style={Object {}}
  >
    <div
      className="sc-AxhUy hyMSCF"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={NaN}
        className="sc-AxjAm iGTrFZ sc-AxgMl cxJYYh"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-AxheI fcSpvz"
    >
      <div
        className="sc-AxirZ iWBtgN"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": NaN,
            "value": NaN,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots max 1`] = `
<div
  className="sc-AxiKw emHJuz"
>
  <div
    className="sc-AxhCb jOJTnl"
    style={Object {}}
  >
    <div
      className="sc-AxhUy hyMSCF"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-AxheI fcSpvz"
    >
      <div
        className="sc-AxirZ cESjww"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots min 1`] = `
<div
  className="sc-AxiKw emHJuz"
>
  <div
    className="sc-AxhCb jOJTnl"
    style={Object {}}
  >
    <div
      className="sc-AxhUy hyMSCF"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-AxheI fcSpvz"
    >
      <div
        className="sc-AxirZ cESjww"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots step 1`] = `
<div
  className="sc-AxiKw emHJuz"
>
  <div
    className="sc-AxhCb jOJTnl"
    style={Object {}}
  >
    <div
      className="sc-AxhUy hyMSCF"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-AxheI fcSpvz"
    >
      <div
        className="sc-AxirZ cESjww"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots step 2`] = `
<div
  className="sc-AxiKw emHJuz"
>
  <div
    className="sc-AxhCb jOJTnl Slider"
    style={Object {}}
  >
    <div
      className="sc-AxhUy hyMSCF"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-AxheI fcSpvz"
    >
      <div
        className="sc-AxirZ cESjww"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;
